--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- Preload imágenes críticas -->
         <link rel="preload" as="image" href="img/hero.webp" type="image/webp" fetchpriority="high">
-        <link rel="preload" as="image" href="img/logo_blanco.png">
+        <link rel="preload" as="image" href="img/logotipo.png">
 
         <!-- CSS crítico inline (solo hero y header para móvil) -->
         <style>
@@ -249,6 +249,7 @@
             <link
                 href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Roboto:wght@300;400;500;700&display=swap"
                 rel="stylesheet">
+            <link href="../estilo/Harabara-Bold.woff" rel="stylesheet">
             <link
                 href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap"
                 rel="stylesheet">
@@ -268,7 +269,7 @@
             <div class="container header-container">
                 <a href="index.html#top" class="logo">
                     <div class="logo-brand">
-                        <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
+                        <img src="img/logotipo.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                     </div>
                 </a>
 
@@ -313,7 +314,7 @@
             <div class="mobile-menu-header">
                 <a href="index.html#top" class="logo mobile-logo">
                     <div class="logo-brand">
-                        <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150"
+                        <img src="img/logotipo.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150"
                             height="50">
                     </div>
                 </a>
